mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: chan
spec:
  ports:
  - name: mysql-svc
    port: 3306
    targetPort: 3306
  selector:
    app: mysql
    type: ClusterIP
